Add filter to the file
