# docs/swagger.json
@@ -51,6 +51,30 @@
                         "name": "limit",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Genre",
+                        "name": "genre",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Title",
+                        "name": "title",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "From",
+                        "name": "from",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "To",
+                        "name": "to",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -780,7 +804,7 @@
                     "type": "string"
                 },
                 "genre": {
-                    "type": "string"
+                    "$ref": "#/definitions/model.Genre"
                 },
                 "id": {
                     "type": "string"
@@ -796,6 +820,9 @@
                 },
                 "updatedAt": {
                     "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/model.User"
                 }
             }
         },
@@ -973,7 +1000,7 @@
                     "type": "string"
                 },
                 "genre": {
-                    "type": "string"
+                    "$ref": "#/definitions/model.Genre"
                 },
                 "id": {
                     "type": "string"
@@ -988,6 +1015,60 @@
                     "type": "string"
                 },
                 "updatedAt": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/model.User"
+                }
+            }
+        },
+        "model.Genre": {
+            "type": "string",
+            "enum": [
+                "Action",
+                "Comedy",
+                "Drama",
+                "Horror",
+                "Romance",
+                "Sci-Fi"
+            ],
+            "x-enum-varnames": [
+                "Action",
+                "Comedy",
+                "Drama",
+                "Horror",
+                "Romance",
+                "SciFi"
+            ]
+        },
+        "model.User": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "films": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Film"
+                    }
+                },
+                "firstname": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "jwtToken": {
+                    "type": "string"
+                },
+                "lastname": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                },
+                "username": {
                     "type": "string"
                 }
             }
